# steganographic_inserter

./: .gitignore  InserterBMP.cpp  InserterBMP.h  README.md  Steganographic_Tool.pro  appIcon.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  steganographic_inserter.pro  stenographic_inserter.pro  ui_mainwindow.h
backend/: CMakeLists.txt
backend/include/: Method.h  MethodKutter.h  MethodLSB.h  MethodZhaoKoch.h  Statistics.h  Viewer.h  types.h
backend/src/: CMakeLists.txt  Method.cpp  MethodKutter.cpp  MethodLSB.cpp  MethodZhaoKoch.cpp  Viewer.cpp  main.cpp
stenographic_inserter_backend/: CMakeLists.txt
stenographic_inserter_backend/include/: InserterBMP.h
stenographic_inserter_backend/src/: CMakeLists.txt  InserterBMP.cpp  Statistics.cpp  main.cpp
